  (emh)
- Add_commas works better with negative numbers. (emh)
- Minor code cleanups. (Phil)
- Convert Evil Tabs in source to (4) spaces.  Code should be easier to read and
  edit now.  (emh)
- Changed savefile signature string to be less release-version based, now that
  the format is churning a lot less. (Phil)
- Make new clock code run properly in Windows. (Phil)

v0.22 (release 2005.10.05):
  [To read about the save file compatibility policy, please see README.txt.]
  NOTE: Save files from versions 0.21 and above should work.  Save files from
  versions 0.20 and before will not work.

- At the start, money gains a minimal amount of interest (as opposed to none).
  (Phil)
- Make the 'change research' button more obvious. (Phil)
- Change the way that technologies/items are stored.  There is now a separate text
  file detailing the technology tree, and another with all of the text
  strings.  This will allow localization of the technologies. (emh)
- When technologies are completed, we can now display a string detailing the
  result. (emh)
- Complete rewrite of technology descriptions, better matching the new names.
  (Phil)
- Minor cleanup of base descriptions. (Phil)
- New default font (Bitstream Vera Sans), especially useful for systems that
  don't have a default Pygame font for some reason (emh; reported by Brian
  Ropers-Huilman)
- Hotkeys for the various speed settings (1-4). (emh)
- Call the 'per day' code for however many days is necessary since the last
  call. (emh)
- Change the grace period for bases to start when construction is complete.
  (emh)
- Keys can repeat/mouse can be used when in textboxes. (emh, Phil)
- Reduce discovery chances for most agencies for most bases. (Phil)
- Added a new cheat. (Phil)
- Fixed tech studying when money is needed. (emh)
- Added next/prev base buttons. (emh, Borg[MDQ] for suggestion)
- es_AR translation (our first!) (Borg[MDQ], very minor fixups by Phil)
- Moved more things into data files. (emh)