@@ -38,6 +38,8 @@ OTHER CHANGES:
 - Changed savefile signature string to be less release-version based, now that
   the format is churning a lot less. (Phil)
 - Make new clock code run properly in Windows. (Phil)
+- Fix clock code to handle "didn't run fast enough" properly. (Phil, mandos
+  for suggestion)
 
 v0.22 (release 2005.10.05):
   [To read about the save file compatibility policy, please see README.txt.]
